--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <script>
-  pizzaLink = ""
+  pizzaLink = "https://www.google.com"
 </script>
-<meta http-equiv="Refresh" content="0; url=" + pizzalink />
+<meta http-equiv="Refresh" content="0; url=" + pizzalink/>
