--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-<script>
-  pizzaLink = "https://www.google.com"
-</script>
-<meta http-equiv="Refresh" content="0; url=" + pizzalink/>
+<meta http-equiv="Refresh" content="0; url='https://www.w3docs.com'" />
