--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<meta http-equiv="Refresh" content="0; url='https://www.w3docs.com'" />
+<!DOCTYPE html>
+<html>
+  ## https://www.w3docs.com/snippets/html/how-to-redirect-a-web-page-in-html.html
+  <head>
+    <meta http-equiv="refresh" content="7; url='https://www.w3docs.com'" />
+  </head>
+  <body>
+    <p>youll get sent to the download in just a minute...</p>
+  </body>
+</html>
