--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   ## https://www.w3docs.com/snippets/html/how-to-redirect-a-web-page-in-html.html
-  var pizzalink = "https://www.google.com"
   <head>
-    <meta http-equiv="refresh" content="7; url=pizzalink" />
+    <meta http-equiv="refresh" content="7; url="www.google.com"" />
   </head>
   <body>
     <p>youll get sent to the download in just a minute...</p>
