make it work x2

--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
-  ## https://www.w3docs.com/snippets/html/how-to-redirect-a-web-page-in-html.html
   <head>
-    <meta http-equiv="refresh" content="7; url="www.google.com"" />
+    <meta http-equiv="refresh" content="7; url='https://www.google.com'" />
   </head>
   <body>
-    <p>youll get sent to the download in just a minute...</p>
+    <p>youll be redirected just wait</p>
   </body>
 </html>
-
