Update index.html title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title> 
+        downloads
+    </title>
     <meta http-equiv="refresh" content="0; url='https://www.google.com'" />
   </head>
   <body>
