--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
   </head>
   <body>
     <p>youll be redirected just wait</p>
+    <a href="https://www.wikihow.com/Main-Page">
+    <button class="button"> xtravaganza </button>   
   </body>
 </html>
