--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title> 
         downloads
     </title>
-  ##<meta http-equiv="refresh" content="0; url='https://www.google.com'" />
+  ## meta http-equiv="refresh" content="0; url='https://www.google.com'" />
   </head>
   <body>
     <p>youll be redirected just wait</p>
