--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
     <p>youll be redirected just wait</p>
     <a href="https://www.wikihow.com/Main-Page">
     <button class="button"> xtravaganza </button>   
+    <a href="https://pizzatower.fandom.com/wiki/The_Noise/Gallery#Scrapped_Moves">
+    <button class="button"> prickly pizza </button>
   </body>
 </html>
